--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,19 @@ ul {
     list-style: none;
 }
 
+li {
+    font-family: 'Graphik LC TT';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 15px;
+    color: #000000;
+    margin-bottom: 15px;
+}
+
 button {
     border-style: none;
+    cursor: pointer;
 }
 
 h1 {
@@ -90,7 +101,7 @@ p {
     color: #000000;
 }
 
-p2 {
+.p2 {
     font-family: 'Graphik LC TT';
     font-style: normal;
     font-weight: 400;
@@ -99,7 +110,7 @@ p2 {
     color: #000000;
 }
 
-p3 {
+.p3 {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -107,7 +118,7 @@ p3 {
     line-height: 30px;
 }
 
-p4 {
+.p4 {
     font-family: 'Graphik LC TT';
     font-style: normal;
     font-weight: 400;
@@ -205,7 +216,7 @@ span.violet {
     max-width: 1287px;
     width: 100%;
     margin: 0 auto;
-    padding: 10px;
+    padding: 0 10px;
 }
 
 .container2 {
@@ -382,16 +393,17 @@ span.violet {
 }
 
 .leftimage {
+    display: flex;
+    flex-direction: column;
     background: #FFF8E4;
     border-radius: 0px;
-    min-width: 630px;
-    min-height: 630px;
-    padding: 119px 66px 158px 66px;
+    max-width: 630px;
+    max-height: 630px;
+    padding: 119px 66px 118px;
 }
 
 .imageinside {
-    width: 500px;
-    height: 300px;
+    width: fit-content;
     background: #FFFFFF;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.098);
     border-radius: 4px;
@@ -404,7 +416,6 @@ span.violet {
     font-weight: 400;
     font-size: 14px;
     line-height: 30px;
-    text-align: center;
     color: #000000;
     margin-left: 40px;
 }
@@ -583,6 +594,15 @@ span.violet {
     gap: 25px;
 }
 
+.toolsimg {
+    display: flex;
+    max-width: 100%;
+}
+
+.toolsimg>img {
+    width: 100%;
+}
+
 .worktools>button {
     padding: 0px 20px 0px 20px;
 }
@@ -596,6 +616,79 @@ span.violet {
     margin-bottom: 161px;
 }
 
-padding {
+.footer {
     background: #EEEEEE;
+}
+
+.footertop {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 92px;
+    padding-bottom: 95px;
+    border-bottom: 1px solid black;
+}
+
+.footercolumn {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    max-width: 300px;
+}
+
+#case {
+    font-size: 40px;
+}
+
+#smallspec {
+    max-width: 80px;
+}
+
+.footercards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 34px;
+    margin-left: 140px;
+}
+
+.footercard {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    gap: 21px;
+    min-width: 175px;
+}
+
+.footerbottom {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 47px;
+    margin-bottom: 48px;
+}
+
+.bottomfont {
+    font-family: 'Graphik LC TT';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    color: #000000;
+}
+
+.bottomleft {
+    display: flex;
+    flex-direction: row;
+    max-width: 400px;
+    align-items: center;
+    gap: 14px;
+}
+
+.bottomright {
+    display: flex;
+    align-items: center;
+    max-width: 100px;
 }
